
FEATURE  [CORE] Remove redundant fields from MAME DB 'coins' and 'control_type'. Use new
         'input' data structure to replace them.

FEATURE  [CORE] At least two directories for samples are needed. MAME includes a default samples
         directory with some samples used by some machines. Both directories must be configured
         in mame.ini in order to get all the samples working.

FEATURE  [FILTERING] Implement <Include>, <Exclude> and <Change> tags.
         This will require more work than expected. Currently, only parent machines are filtered
         and clone machines are added after the filtering process. However, to implement
         Include, Exclude and Change tags, all machines must be included in the filter list.
         This will require modification of the filter render engine (must be rendered always in
         flat mode and not in parent/clone mode).

FEATURE  [MANUALS] Progress bar when extracting PDF pages.

FEATURE  [MANUALS] When displaying manuals use cached extracted images if they exist.
         When the manual is extracted, create a small JSON file with the timestamp of
         the extraction so it can be compared with the timestamp of the PDF file to
         test if images must be extracted again.

FIX      In MAME 0.206, some clone merged ROMs are not present in the parent machine, only
         in the BIOS. For example, in machine adonisce (clone of adonis). Before 0.206, such
         ROMs were also present on the parent machine. This change in behaviour crashed AML.

FIX      Fixed the AML addon and MAME numerical versioning scheme.

FIX      Fix crash in "Build MAME databases".
         See https://forum.kodi.tv/showthread.php?tid=304186&pid=2822949#pid2822949

FIX      Some Software List ROMs are compressed using non-ASCII characters and this make
         the audit engine to crash. I have to investigate how to fix this issue.