@@ -97,6 +97,10 @@ FEATURE  [CORE] Remove redundant fields from MAME DB 'coins' and 'control_type'.
 FEATURE  [CORE] At least two directories for samples are needed. MAME includes a default samples
          directory with some samples used by some machines. Both directories must be configured
          in mame.ini in order to get all the samples working.
+         NOTE This feature was cancelled. Only one Samples directory. If the user wants to have
+         a complete Good audit, then the samples shipped with MAME must be compressed and
+         the ZIP file placed in the unique samples directory. In any case, only three machines
+         are affected.
 
 FEATURE  [FILTERING] Implement <Include>, <Exclude> and <Change> tags.
          This will require more work than expected. Currently, only parent machines are filtered
